--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,12 @@
     <string name="sat">Saturday</string>
     <string name="sun">Sunday</string>
 
+    <string name="pc">Partly Cloudy\n24C - 31C</string>
+    <string name="s">Showers\n24C - 30C</string>
+    <string name="r">Rain\n22C - 23C</string>
+    <string name="ss">Scattered Showers\n22C - 27C</string>
+    <string name="mc">Mostly Cloudy\n22C - 30C</string>
+    <string name="t">Thunderstorms\n25C - 28C</string>
+    <string name="st">Scattered Thunderstorms\n24C - 27C</string>
 
 </resources>
